--- a/css/style.css
+++ b/css/style.css
@@ -74,10 +74,9 @@ body{
       flex-basis: 100%;
       flex-direction: column;
   }
-
+  
   .nav_item a{
     padding: 10px;
-    color: blue;
   }
   
   .nav_item a:hover, a:focus{
@@ -161,6 +160,9 @@ body{
     padding: 30px;
     text-align: center;
   }
+  a:visited{
+    color: blue;
+}
 
   @media screen and (min-width: 850px){
     header{
@@ -188,4 +190,5 @@ body{
         transform: scaleY(1.1);
         z-index: -99;
   }
+
 }
