--- a/css/style.css
+++ b/css/style.css
@@ -192,3 +192,38 @@ body{
   }
 
 }
+    @media (prefers-reduced-motion: reduce) {
+    .logo {
+      animation: none;
+    }
+  }
+
+  @media print {
+    .skip, .gallery {
+        display: none;
+    }
+    #gallery{
+        visibility: hidden;
+    }
+    header {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        justify-content: space-around;
+        align-items: center;
+    }
+    body {
+        display: flex;
+        background-image: none;
+        background-color: #f1f1f1;
+        flex-wrap: wrap;
+    }
+    .pricing{
+        align-items: baseline;
+    }
+    .card{
+        border: solid 2px #45ADAD;
+        flex-basis: 250px;
+    }
+
+  }
